--- a/FileShare/Frontend/static/css/components/Base_Share_navbar.css
+++ b/FileShare/Frontend/static/css/components/Base_Share_navbar.css
@@ -28,6 +28,8 @@
     font-weight: 700;
 
     margin-left: 10px;
+    text-decoration: none;
+    color: linear-gradient(lightblue,blue);
 }
 
 .navLinks {
@@ -66,6 +68,9 @@ li > ul {
     display:none;
 }
 
+li > a {
+    text-decoration: none;
+}
 
 .hamburger-menu {
     display: none;
