--- a/FileShare/Frontend/templates/Base_Share/file_display.html
+++ b/FileShare/Frontend/templates/Base_Share/file_display.html
@@ -8,7 +8,7 @@
     <title> {{ FileName }} </title>
 </head>
 <body>
-    <h2>Location :- http://127.0.0.1:8000/{{ FileLocation }}</h2>
+    <h2>Location :- https://anirudh3167.pythonanywhere.com/{{ FileLocation }}</h2>
     <iframe src="{% static FileLocation %}" type="text/pdf" style="width:600px; height:800px; border:none;"></iframe>
     <!-- <iframe srcdoc="{{ FileContent }}" style="width: 600px; height: 800px;" frameborder="0"></iframe> -->
 </body>
