--- a/FileShare/Frontend/templates/components/Base_Share_navbar.html
+++ b/FileShare/Frontend/templates/components/Base_Share_navbar.html
@@ -28,7 +28,7 @@
                 </li>   
                 <li> Editor
                     <ul>
-                        <li> New      </li>
+                        <li> <a href="{% url 'Base_Share:TextEditor' %}"> New </a></li>
                         <li> Existing </li>
                     </ul>
                 </li>
