--- a/FileShare/Frontend/static/css/Text_editor.css
+++ b/FileShare/Frontend/static/css/Text_editor.css
@@ -10,10 +10,10 @@
     justify-content: center;
     flex-direction: column;
 
-    margin-top: 70px;
-    width: 100vw;
+    margin-top: 60px;
+    max-width: 100vw;
 
-    background-color: rgb(40,40,40);
+    background-color: rgb(60,60,60);
 }
 
 .Editor {
@@ -22,6 +22,10 @@
     justify-content: center;
     flex-direction: column;
 
+    margin: 0;
+    margin-top: 20px;
+
+    color: rgb(190,190,190);
 }
 
 .CodeName {
