--- a/FileShare/Frontend/templates/Base_Share/Text_editor.html
+++ b/FileShare/Frontend/templates/Base_Share/Text_editor.html
@@ -25,12 +25,47 @@
     <script>
         document.getElementById("TextArea").addEventListener("keydown", function(event) {
             var elem = document.querySelector("#TextArea");
-                if (event.keyCode === 13 && !event.shiftKey) {
-                  event.preventDefault();
-                  var br = document.createElement("br");
-                  elem.appendChild(br);
+                if (event.keyCode === 13 & !event.shiftKey) {  // For Enter + Shift
+                    // Prevent the Default action.
+                    event.preventDefault();
+
+                    // Getting the editor selection and range
+                    var editor = document.getElementById("TextArea");
+                    var doc = editor.ownerDocument.defaultView;
+                    var sel = doc.getSelection();
+                    var range = sel.getRangeAt(0);
+
+                    // The action to be done.
+                    var newLine = document.createTextNode("\u2029");
+                    range.insertNode(newLine);
+
+                    // Move the cursor to new line.
+                    range.setStartAfter(newLine);
+                    range.setEndAfter(newLine);
+                    sel.removeAllRanges();
+                    sel.addRange(range);
+                }
+                else if (event.keyCode === 9) { // For Tab
+                    // Prevent the default action.
+                    event.preventDefault();
+
+                    // Reffer to :- https://stackoverflow.com/questions/2237497/make-the-tab-key-insert-a-tab-character-in-a-contenteditable-div-and-not-blur
+                    // now insert four non-breaking spaces for the tab key
+                    var editor = document.getElementById("TextArea");
+                    var doc = editor.ownerDocument.defaultView;
+                    var sel = doc.getSelection();
+                    var range = sel.getRangeAt(0);
+
+                    var tabNode = document.createTextNode("\u00a0\u00a0\u00a0\u00a0");
+                    range.insertNode(tabNode);
+
+                    range.setStartAfter(tabNode);
+                    range.setEndAfter(tabNode); 
+                    sel.removeAllRanges();
+                    sel.addRange(range);
                 }
         });
+
     </script>
 </body>
 </html>
