--- a/FileShare/Frontend/templates/Base_Share/home.html
+++ b/FileShare/Frontend/templates/Base_Share/home.html
@@ -19,7 +19,7 @@
                 <div class="dragDropButton" id="dragDropButton" onclick="takeInput()">
                     Upload here.
                 </div>
-                <input type="file" id="fileInput" name="file_input" oninput="showInput()">
+                <input type="file" id="fileInput" name="file_input" oninput="showInput()" multiple>
             </div>
             <div class="btn-class">
                 <button type="submit" class="submit-btn"> Generate Link</button>
