--- a/FileShare/Frontend/static/css/Text_editor.css
+++ b/FileShare/Frontend/static/css/Text_editor.css
@@ -6,14 +6,11 @@
 
 .mainContainer {
     display: flex;
-    align-items: center;
-    justify-content: center;
     flex-direction: column;
 
-    margin-top: 60px;
-    max-width: 100vw;
+    width: 100vw;
 
-    background-color: rgb(60,60,60);
+    background: linear-gradient(90deg,rgb(150,150,20),red);
 }
 
 .Editor {
@@ -23,7 +20,7 @@
     flex-direction: column;
 
     margin: 0;
-    margin-top: 20px;
+    margin-top: 80px;
 
     color: rgb(190,190,190);
 }
