--- a/FileShare/Frontend/static/css/components/Base_Share_navbar.css
+++ b/FileShare/Frontend/static/css/components/Base_Share_navbar.css
@@ -14,9 +14,10 @@
     width: 100vw;
     height: 60px;
 
-    background-color: rgb(50,50,50);
-
-    box-shadow: 1px 2px 4px rgb(30,30,30);
+    background-color: rgba(210,210,210,0.2);
+    border: none;
+    box-shadow: 3px 0px 5px rgb(30,30,30);
+    z-index: 1;
 }
 
 .logoSpace {
@@ -24,12 +25,16 @@
     align-items: center;
     justify-content: center;
 
-    font-size: 24px;
+    font-size: 28px;
     font-weight: 700;
 
     margin-left: 10px;
     text-decoration: none;
-    color: linear-gradient(lightblue,blue);
+    background: linear-gradient(90deg,rgb(150,150,20),red);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+
+    transition: 1s;
 }
 
 .navLinks {
@@ -58,14 +63,16 @@ ul > li {
 
     width: 120px;
 
+    font-size: 20px;
+    font-weight: 400;
     list-style: none;
-
-    background-color: rgb(50,50,50); 
+    background-color: transparent; 
     
 }
 
 li > ul {
     display:none;
+    background-color: rgba(210,210,210,0.6);;
 }
 
 li > a {
