--- a/FileShare/Frontend/static/css/link_generation.css
+++ b/FileShare/Frontend/static/css/link_generation.css
@@ -12,7 +12,7 @@
     flex-direction : column;
     
     width : 100vw;
-    min-height : 600px;
+    min-height : 100vh;
     
     background-color: rgb(60,60,60);
     }
