Plain background is chosen

--- a/FileShare/Frontend/templates/components/Base_Share_navbar.html
+++ b/FileShare/Frontend/templates/components/Base_Share_navbar.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="mainNavWrapper">
-        <a href="http://127.0.0.1:8000" class="logoSpace"> File Share </a>
+        <a href="{% url 'Base_Share:Public Links' %}" class="logoSpace"> File Share </a>
         <div class="navLinks" id="navLinks">
 
             <div class="hamburger-menu" onclick="hamburger()">
