--- a/FileShare/Frontend/static/css/Upload.css
+++ b/FileShare/Frontend/static/css/Upload.css
@@ -12,7 +12,7 @@
 
     min-width: 100vw;
     min-height: 100vh;
-    background: linear-gradient(90deg,rgb(150,150,20),red);
+    background: white;
 }
 
 .uploadBox {
