--- a/FileShare/Frontend/static/css/file_recieve.css
+++ b/FileShare/Frontend/static/css/file_recieve.css
@@ -13,7 +13,7 @@
     min-height : 100vh;
 
     margin: 0;
-    background: linear-gradient(90deg, rgb(150,150,20),red);
+    background: white;
     }
 
 .reciever-form {
@@ -25,6 +25,8 @@
     width: 300px;
     min-height: 200px;
     background-color: white;
+    box-shadow: 0px 0px 4px rgb(40,40,40),
+                0px 0px 8px rgb(60,60,60);
 }
 
 .inputBox {
