--- a/FileShare/Frontend/static/css/link_generation.css
+++ b/FileShare/Frontend/static/css/link_generation.css
@@ -14,7 +14,7 @@
     width : 100vw;
     min-height : 100vh;
     
-    background-color: rgb(60,60,60);
+    background-color:white;
     }
     
     .textContainer {
@@ -34,6 +34,8 @@
     border-radius : 20px;
     border : 2px solid blue;
     border-style : dotted;
+    background-color: rgba(230,230,230,0.2);
+    box-shadow: 0px 0px 4px rgb(40,40,40);
     }
     
     a {
