--- a/FileShare/Frontend/static/css/public_links.css
+++ b/FileShare/Frontend/static/css/public_links.css
@@ -14,7 +14,7 @@
     min-height: 600px;
     height: 100vh;
 
-    background: linear-gradient(90deg, rgb(150,150,20), red);
+    background: white;
 }
 
 .tableContainer {
