--- a/FileShare/Frontend/static/css/Text_editor.css
+++ b/FileShare/Frontend/static/css/Text_editor.css
@@ -1,3 +1,7 @@
+::-webkit-scrollbar {
+    width: 0;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -6,6 +10,8 @@
 
 .mainContainer {
     display: flex;
+    align-items: center;
+    justify-content: center;
     flex-direction: column;
 
     width: 100vw;
@@ -21,8 +27,9 @@
 
     margin: 0;
     margin-top: 80px;
+    padding-left: 10px;
 
-    color: rgb(190,190,190);
+    color: black;
 }
 
 .CodeName {
@@ -30,13 +37,16 @@
     align-items: center;
     justify-content: center;
 
-    width: 150px;
+    width: 200px;
     height: 40px;
 
     border: 1px solid blue;
 
-    margin-left: 10px;
+    padding: 10px;
+    font-size: 18px;
 }
+
+.CodeName::placeholder {color:rgb(190,190,190);}
 
 .Tools {
     width: 100%;
@@ -50,13 +60,35 @@
     justify-content: flex-start;
 
     min-width: 280px;
-    width: 90vw;
-    min-height: 500px;
+    width: calc(100vw - 20px);
+    height: calc(100vh - 200px);
 
-    margin-left: 10px;
     padding: 10px;
+    resize: none;
 
     border: 1px solid black;
 
-    font-family: 'Courier New', monospace;
+    font-family:sans-serif;
+    font-size: 18px;
+}
+
+.TextArea::placeholder {color:rgb(190,190,190);}
+
+.uploadBtn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 150px;
+    height: 60px;
+
+    border-radius: 5px;
+    margin: 10px;
+    font-size: 20px;
+    font-weight: 500;
+    cursor: pointer;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+    background-color: blue;
+    color: white;
 }
